--- a/chat-app-backend/package.json
+++ b/chat-app-backend/package.json
@@ -6,16 +6,18 @@
     "start": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Himanshu",
   "license": "ISC",
-  "description": "",
+  "description": "Contains the backend code for chat application using Node.js, Express, Socket.io, and PostgreSQL.",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.772.0",
     "@prisma/client": "^6.5.0",
     "aws-sdk": "^2.1692.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
